@@ -1,3 +1,7 @@
+2021-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/raylib_opengl_interop.rb: Added
+
 2021-11-07  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/rlgl_compute_shader.rb: Added
